--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,14 +38,17 @@
     <%= yield %>
 
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <p class="text-right">CopyRight Infratop.inc</p>
-          </div>
+      <div id="container">
+        <div id="theTarget">
+          <div class="image1"></div>
+          <div class="image2"></div>
+          <div class="image3"></div>
+          <div class="image4"></div>
+          <div class="image5"></div>
         </div>
+        <p class="text-right">CopyRight Infratop.inc</p>
       </div>
-  </footer>
+    </footer>
 
   </body>
 </html>
