--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,21 +1,45 @@
 <h3>Books</h3>
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th>Title</th>
-			<th>Opinion</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% books.each do |book| %>
-		<tr>
-			<td>
-				<%=link_to book_path(book.id) do %>
-				<%= book.title %>
-				<% end %>
-			</td>
-			<td><%= book.body %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+	<table class="table table-hover">
+		<thead>
+			<tr>
+				<th></th>
+				<th>Title</th>
+				<th>Opinion</th>
+				<th></th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% books.each do |book| %>
+				<tr>
+					<td>
+						<%=link_to user_path(book.user) do %>
+							<%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+						<% end %>
+					</td>
+					<td>
+						<%=link_to book_path(book.id) do %>
+							<%= book.title %>
+						<% end %>
+					</td>
+					<td><%= book.body %></td>
+					<td>
+						<% if book.favorited_by?(current_user) %>
+							<%= link_to book_favorites_path(book), method: :delete do %>
+								<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+								<%= book.favorites.count %> いいね
+							<% end %>
+						<% else %>
+							<%= link_to book_favorites_path(book), method: :post do %>
+								<i class="fa fa-heart-o" aria-hidden="true"></i>
+								<%= book.favorites.count %> いいね
+							<% end %>
+						<% end %>
+					</td>
+					<td>
+						<p class="comment-count">コメント数:<%= book.book_comments.count %></p>
+					</td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
