--- a/app/views/books/_new.html.erb
+++ b/app/views/books/_new.html.erb
@@ -1,6 +1,6 @@
 		<h3><b>New book</b></h3>
 		<%= form_for(book) do |f| %>
-		<%= render "books/error", book: @book %>
+		<%= render "books/error", book: f.object %>
 		<h5>Title</h5>
 		<%= f.text_field :title, class:"form-control"  %>
 
