--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,8 +3,8 @@
 		<div class=col-md-3></div>
 		<div class=col-md-5>
 			<h2>Editing Book</h2>
-			<%= render "books/error", book: @book %>
 			<%=form_for(@book) do |f| %>
+			<%= render "books/error", book: f.object %>
 				<h5>Title</h5>
 				<%= f.text_field :title, class:"form-control" %>
 				<h5>Body</h5>
