--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,38 +3,12 @@
 		<div class="col-xs-3">
 
 			<%= render "users/list", user: current_user %>
-			<%= render "books/new", book: @book %>
+			<%= render "books/new", book: @bookn %>
 
 		</div>
 		<div class="col-xs-9">
 
-			<h3>Books</h3>
-			<table class="table table-hover">
-				<thead>
-					<tr>
-						<th></th>
-						<th>Title</th>
-						<th>Opinion</th>
-					</tr>
-				</thead>
-				<tbody>
-					<% @books.each do |book| %>
-					<tr>
-						<td>
-							<%=link_to user_path(book.user) do %>
-								<%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
-								<% end %>
-							</td>
-							<td>
-								<%=link_to book_path(book.id) do %>
-									<%= book.title %>
-								<% end %>
-							</td>
-							<td><%= book.body %></td>
-						</tr>
-						<% end %>
-					</tbody>
-				</table>
+			<%= render "books/list", books: @books %>
 			
 		</div>
 	</div>
