--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,13 +3,15 @@
 	<div class="row">
 		<div class="col-xs-3">
 			<%= render "users/list", user: @user %>
-			<%= render "books/new", book: @book1 %>
+			<%= render "books/new", book: @bookn %>
 		</div>
 		<div class="col-xs-9">
 			<h3>Book detail</h3>
 			<table class="table">
 				<thead>
 					<tr>
+						<th></th>
+						<th></th>
 						<th></th>
 						<th></th>
 						<th></th>
@@ -34,13 +36,67 @@
 							<% end %>
 						</td>
 						<td><%= @book.body %></td>
+						<td>
+							<% if @book.favorited_by?(current_user) %>
+								<%= link_to book_favorites_path(@book), method: :delete do %>
+									<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+									<%= @book.favorites.count %> いいね
+								<% end %>
+							<% else %>
+								<%= link_to book_favorites_path(@book), method: :post do %>
+									<i class="fa fa-heart-o" aria-hidden="true"></i>
+									<%= @book.favorites.count %> いいね
+								<% end %>
+							<% end %>
+						</td>
+						<td>
+							<p class="comment-count">コメント数:<%= @book.book_comments.count %></p>
+						</td>
 						<% if @book.user == current_user %>
 							<td><%= link_to "Edit", edit_book_path(@book.id), class:"btn btn-primary btn-sm" %></td>
-							<td><%= link_to "Destroy", book_path(@book.id), method: :delete, class:"btn  btn-success btn-sm" %></td>
+							<td><%= link_to "Destroy", book_path(@book.id), method: :delete, class:"btn  btn-success btn-sm", "data-confirm" => "本当に削除してもよろしいですか？" %></td>
 						<% end %>
 					</tr>
 				</tbody>
 			</table>
+
+			<h3>Comment index</h3>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>name</th>
+						<th>comment</th>
+						<th>time</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @book.book_comments.each do |book_comment| %>
+						<tr>
+							<td>
+								<%= book_comment.user.name %>
+							</td>
+							<td>
+								<%= book_comment.comment %>
+							</td>
+							<td>
+								<%= book_comment.created_at.strftime("%Y/%m/%d") %>
+							</td>
+							<td>
+								<% if book_comment.user == current_user %>
+									<%= link_to "Destroy", book_book_comment_path(@book, book_comment), method: :delete, class:"btn  btn-success btn-sm", "data-confirm" => "本当に削除してもよろしいですか？" %>
+								<% end %>
+							</td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+			<%= form_for [@book, @comment] do |f| %>
+				<%= render "books/error", book:@comment %>
+				<%= f.text_area :comment, rows:"5", class:"form-control", placeholder:"コメントをここに" %>
+				<br>
+				<%= f.submit "送信する", class:"btn  btn-lg pull-right btn-primary" %>
+			<% end %>
 		</div>
 	</div>
 </div>
