--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Bookers</title>
-    <%= csrf_meta_tags %>
+    <%= csrf_meta_tag %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -38,14 +38,6 @@
     <%= yield %>
 
     <footer>
-      <div id="container">
-        <div id="theTarget">
-          <div class="image1"></div>
-          <div class="image2"></div>
-          <div class="image3"></div>
-          <div class="image4"></div>
-          <div class="image5"></div>
-        </div>
         <p class="text-right">CopyRight Infratop.inc</p>
       </div>
     </footer>
