--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,18 +1,8 @@
 <div class="form-body" >
 	<h3>User info</h3>
 	
-	<% if @user.errors.any? %>
-		<div class="aler alert-warning">
-		<h5> <%= @user.errors.count %>errors prohibited this book from being saved </h5>
-		<ul>
-			<% @user.errors.full_messages.each do |message| %>
-			<li> <%= message %> </li>
-			<% end %>
-		</ul>
-		</div>
-	<% end %>
-
 	<%= form_for(@user) do |f| %>
+	<%= render "books/error", book: f.object %>
 	<h5>Name</h5>
 	<%= f.text_field :name %>
 
