--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-3">
 			<%= render "users/list", user: @user %>
-			<%= render "books/new", book: @book %>
+			<%= render "books/new", book: @bookn %>
 
 		</div>
 		<div class="col-xs-9">
