--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 	<div class="row">
 		<div class="col-xs-3">
 			<%= render "users/list", user: @user %>
-			<%= render "books/new", book: @book %>
+			<%= render "books/new", book: @bookn %>
 		</div>
 		<div class="col-xs-9">
 			<%= render "books/list", books: @books %>
