--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -35,9 +35,9 @@
 			</table>
 			<% if user != current_user %>
 				<% if current_user.following?(user) %>
-    			<%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST, class: "btn btn-block btn-success" %>
+    			<%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete, class: "btn btn-block btn-success" %>
   			<% else %>
-    			<%= link_to 'フォローする', follow_path(user.id), method: :POST ,class: "btn btn-block btn-success" %>
+    			<%= link_to 'フォローする', user_relationships_path(user.id), method: :POST ,class: "btn btn-block btn-success" %>
   			<% end %>
 			<% else %>
 				<%= link_to edit_user_path(user), class: "btn btn-block btn-default" do%><i class="glyphicon glyphicon-wrench"></i><% end %>
