--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,41 +7,9 @@
 		</div>
 		<div class="col-xs-9">
 			<h3>Users</h3>
-			<table class="table">
-				<thead>
-					<tr>
-						<th>image</th>
-						<th>name</th>
-						<th></th>
-						<th></th>
-						<th></th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
 
-					<% @users.each do |user| %>
-					<tr>
-						<td><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %></td>
-						<td><%= user.name %></td>
-						<td><%= "フォロー数: #{user.following.count}" %></td>
-						<td><%= "フォロワー数: #{user.followers.count}" %></td>
-						<td>
-							<% unless user == current_user %>
-								<% if current_user.following?(user) %>
-        					<%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
-      					<% else %>
-        					<%= link_to 'フォローする', follow_path(user.id), method: :POST %>
-      					<% end %>
-      				<% end %>
-						</td>
-						<td>
-							<%= link_to "Show", user_path(user.id) %>
-						</td>
-					</tr>
-					<% end %>
-				</tbody>
-			</table>
+			<%= render "users/index", users: @users %>
+			
 		</div>
 	</div>
 </div>
