--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
 			<%= render "books/new", book: @bookn %>
 		</div>
 		<div class="col-xs-9">
+			<h3>Books</h3>
 			<%= render "books/list", books: @books %>
 		</div>
 	</div>
