--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,20 +1,11 @@
-
-	<table class="table table-hover">
-		<thead>
-			<tr>
-				<th></th>
-				<th>Title</th>
-				<th>Opinion</th>
-				<th></th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			<% books.each do |book| %>
-				<tr>
+			
 					<td>
 						<%=link_to user_path(book.user) do %>
 							<%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+						<% end %>
+						<br>
+						<%= link_to user_path(book.user) do %>
+							<% book.user.name %>
 						<% end %>
 					</td>
 					<td>
@@ -25,12 +16,12 @@
 					<td><%= book.body %></td>
 					<td>
 						<% if book.favorited_by?(current_user) %>
-							<%= link_to book_favorites_path(book), method: :delete do %>
+							<%= link_to book_favorites_path(book), method: :delete, remote: true do %>
 								<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
 								<%= book.favorites.count %> いいね
 							<% end %>
 						<% else %>
-							<%= link_to book_favorites_path(book), method: :post do %>
+							<%= link_to book_favorites_path(book), method: :post, remote: true do %>
 								<i class="fa fa-heart-o" aria-hidden="true"></i>
 								<%= book.favorites.count %> いいね
 							<% end %>
@@ -39,7 +30,9 @@
 					<td>
 						<p class="comment-count">コメント数:<%= book.book_comments.count %></p>
 					</td>
-				</tr>
-			<% end %>
-		</tbody>
-	</table>
+					<% if book.user == current_user %>
+						<td><%= link_to "Edit", edit_book_path(book.id), class:"btn btn-primary btn-sm" %></td>
+						<td><%= link_to "Destroy", book_path(book.id), method: :delete, class:"btn  btn-success btn-sm", "data-confirm" => "本当に削除してもよろしいですか？" %>
+						</td>
+					<% end %>
+				
