--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,79 +20,20 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
-						<td>
-							<%= link_to user_path(@book.user.id) do %>
-								<%= attachment_image_tag @book.user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
-							<% end %>
-							<br>
-							<%= link_to user_path(@book.user.id) do %>
-								<% @book.user.name %>
-							<% end %>
-						</td>
-						<td>
-							<%=link_to book_path(@book.id) do %>
-								<%= @book.title %>
-							<% end %>
-						</td>
-						<td><%= @book.body %></td>
-						<td>
-							<% if @book.favorited_by?(current_user) %>
-								<%= link_to book_favorites_path(@book), method: :delete do %>
-									<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-									<%= @book.favorites.count %> いいね
-								<% end %>
-							<% else %>
-								<%= link_to book_favorites_path(@book), method: :post do %>
-									<i class="fa fa-heart-o" aria-hidden="true"></i>
-									<%= @book.favorites.count %> いいね
-								<% end %>
-							<% end %>
-						</td>
-						<td>
-							<p class="comment-count">コメント数:<%= @book.book_comments.count %></p>
-						</td>
-						<% if @book.user == current_user %>
-							<td><%= link_to "Edit", edit_book_path(@book.id), class:"btn btn-primary btn-sm" %></td>
-							<td><%= link_to "Destroy", book_path(@book.id), method: :delete, class:"btn  btn-success btn-sm", "data-confirm" => "本当に削除してもよろしいですか？" %></td>
-						<% end %>
+					<tr class="book_<%= @book.id %>">
+						<%= render "books/list", book: @book %>
 					</tr>
 				</tbody>
 			</table>
 
 			<h3>Comment index</h3>
-			<table class="table">
-				<thead>
-					<tr>
-						<th>name</th>
-						<th>comment</th>
-						<th>time</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<% @book.book_comments.each do |book_comment| %>
-						<tr>
-							<td>
-								<%= book_comment.user.name %>
-							</td>
-							<td>
-								<%= book_comment.comment %>
-							</td>
-							<td>
-								<%= book_comment.created_at.strftime("%Y/%m/%d") %>
-							</td>
-							<td>
-								<% if book_comment.user == current_user %>
-									<%= link_to "Destroy", book_book_comment_path(@book, book_comment), method: :delete, class:"btn  btn-success btn-sm", "data-confirm" => "本当に削除してもよろしいですか？" %>
-								<% end %>
-							</td>
-						</tr>
-					<% end %>
-				</tbody>
+			<table id="js-table-comment" class="table">
+				
+				<%= render "books/commentlist", book: @book %>
+				
 			</table>
-			<%= form_for [@book, @comment] do |f| %>
-				<%= render "books/error", book:@comment %>
+			<%= render "books/error", book:@comment %>
+			<%= form_with(model: [@book, @comment])  do |f| %>
 				<%= f.text_area :comment, rows:"5", class:"form-control", placeholder:"コメントをここに" %>
 				<br>
 				<%= f.submit "送信する", class:"btn  btn-lg pull-right btn-primary" %>
